--- a/KUBERNETES/deployment0204.yaml
+++ b/KUBERNETES/deployment0204.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 
 kind: Deployment
@@ -46,14 +47,21 @@ spec:
 
      image: manya97/manya_tomcat:0.1
      volumeMounts:
+     - name: index
+       mountPath: /apache-tomcat-8.0.32/webapps/ROOT/index.jsp
      - name: secret-volume
        mountPath: /apache-tomcat-8.0.32/webapp
      ports:
      - containerPort: 80
+
    volumes:
-   - name: secret-volume
-     secret:
-       secretName: my-secret
+     - name: index
+       configMap:
+         name: cm3
+     - name: secret-volume
+       secret:
+         secretName: my-secret
+  
 
     
   
